--- a/package.json
+++ b/package.json
@@ -2,14 +2,22 @@
   "name": "sit725-2021-t2-prac3",
   "version": "1.0.0",
   "description": "Deakin - Applied Software Engineering",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/markvandenhoff/sit725-2021-t2-prac3.git"
   },
+  "keywords": [
+    "Nodejs",
+    "Express",
+    "Materialize",
+    "HTML",
+    "JS",
+    "CSS"
+  ],
   "author": "Mark Vandenhoff",
   "license": "ISC",
   "bugs": {
